xml merge + api issues :(

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WeatherApp">
+        android:theme="@style/Theme.AppCompat.Light">
+        <activity android:name=".searchpage" />
+        <activity android:name=".weatherpage"
+            android:parentActivityName=".searchpage">
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".searchpage" />
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
